--- a/app/components/sticky-note/sticky_note.css
+++ b/app/components/sticky-note/sticky_note.css
@@ -1,4 +1,4 @@
-.Postit {
+.sticky-note {
 	position: absolute;
 	left: 300px;
 	top: 200px;
@@ -8,15 +8,15 @@
 	background-image: url(https://isle.heinz.cmu.edu/Summertime_lp_postit.png);
 }
 
-.postit-exit {
-	animation: postit-swirl-out-bck 1s ease-in forwards;
+.sticky-note-exit {
+	animation: sticky-note-swirl-out-bck 1s ease-in forwards;
 }
 
-.postit-callback {
+.sticky-note-callback {
 	cursor: pointer;
 }
 
-.PostitContent {
+.sticky-note-content {
 	position: inherit;
 	left: 30px;
 	top: 35px;
@@ -26,7 +26,7 @@
 	overflow: hidden;
 }
 
-.PostitTitle {
+.sticky-note-title {
 	position: inherit;
 	top: 10px;
 	padding-left: 10px;
@@ -35,14 +35,13 @@
 	font-weight: 800;
 }
 
-.PostitDate {
+.sticky-note-date {
 	position: inherit;
 	top: 14px;
 	right: 5px;
 }
 
-
-.PostitBody {
+.sticky-note-body {
 	position: inherit;
 	top: 40px;
 	padding: 10px;
@@ -51,7 +50,7 @@
 	font-size: 20px;
 }
 
-.PostitStain {
+.sticky-note-stain {
 	position: inherit;
 	left: 50%;
 	top: 60%;
@@ -62,7 +61,7 @@
 	background-size: 200px 120px;
 }
 
-.PostitPinImageMap {
+.sticky-note-pin-image-map {
 	position: inherit;
 	left: 45%;
 	width: 52px;
@@ -77,7 +76,7 @@
 * animation swirl-out-bck
 * ----------------------------------------
 */
-@-webkit-keyframes postit-swirl-out-bck {
+@-webkit-keyframes sticky-note-swirl-out-bck {
 	0% {
 		-webkit-transform: rotate(0) scale(1);
 		transform: rotate(0) scale(1);
@@ -91,7 +90,7 @@
 	}
 }
 
-@keyframes postit-swirl-out-bck {
+@keyframes sticky-note-swirl-out-bck {
 	0% {
 		-webkit-transform: rotate(0) scale(1);
 		transform: rotate(0) scale(1);
