--- a/app/components/timed-button/timed-button.css
+++ b/app/components/timed-button/timed-button.css
@@ -8,6 +8,14 @@
 	width: auto;
 	height: 2px;
 	background: linear-gradient(45deg, tomato, gold, lightgreen);
+	overflow: hidden;
+}
+
+.timed-button-bar-overlay {
+	width: 100%;
+	height: 100%;
+	background: ivory;
+	margin-left: 50%;
 }
 
 .timed-button-container {
