--- a/app/components/sticky-note/sticky_note.css
+++ b/app/components/sticky-note/sticky_note.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Indie+Flower');
+
 .sticky-note {
 	width: 300px;
 	height: 300px;
@@ -31,8 +33,8 @@
 	position: absolute;
 	top: 10px;
 	padding-left: 10px;
-	font-family: Sacramento;
-	font-size: 24px;
+	font-family: 'Indie Flower', cursive;
+	font-size: 20px;
 	font-weight: 800;
 }
 
@@ -47,8 +49,8 @@
 	top: 40px;
 	padding: 10px;
 	padding-left: 15px;
-	font-family: Sacramento;
-	font-size: 20px;
+	font-family: 'Indie Flower', cursive;
+	font-size: 16px;
 }
 
 .sticky-note-stain {
