Change font sizes to relative so users can adjust

--- a/app/components/sticky-note/sticky_note.css
+++ b/app/components/sticky-note/sticky_note.css
@@ -34,7 +34,7 @@
 	top: 10px;
 	padding-left: 10px;
 	font-family: 'Indie Flower', cursive;
-	font-size: 20px;
+	font-size: 1.4em;
 	font-weight: 800;
 }
 
@@ -50,7 +50,7 @@
 	padding: 10px;
 	padding-left: 15px;
 	font-family: 'Indie Flower', cursive;
-	font-size: 16px;
+	font-size: 1em;
 }
 
 .sticky-note-stain {
