Add outer wrapper to fix draggable bug

--- a/app/components/sticky-note/sticky_note.css
+++ b/app/components/sticky-note/sticky_note.css
@@ -3,9 +3,12 @@
 .sticky-note {
 	width: 300px;
 	height: 300px;
-	z-index: 2;
 	background-image: url(https://isle.heinz.cmu.edu/Summertime_lp_postit.png);
 	transition: all 0.3s;
+}
+
+.sticky-note-outer {
+	z-index: 2;
 }
 
 .sticky-note-wrapper {
