--- a/app/components/sticky-note/sticky_note.css
+++ b/app/components/sticky-note/sticky_note.css
@@ -25,8 +25,6 @@
 	animation: sticky-note-swirl-out-bck 1s ease-in forwards;
 }
 
-
-
 .sticky-note-callback {
 	cursor: pointer;
 }
@@ -52,13 +50,13 @@
 
 .sticky-note-editable-title {
 	border: none;
-	background: gold;
+	background: rgba(255, 255, 255, 0.3);
 	font-weight: 800;
 }
 
 .sticky-note-editable-body {
 	border: none;
-	background: gold;
+	background: rgba(255, 255, 255, 0.3);
 }
 
 
